--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 							<h3 class="text-uppercase">Hell0</h3>
 							<h1 class="text-uppercase">I am Vignesh Kumar</h1>
 							<h5 class="text-uppercase">Front End Developer</h5>
+							<p style="margin-top: -5%; font-size: 16px;">I design, build & sometimes rescue
+								applications.</p>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="#"><span>Hire Me</span></a>
 								<a class="primary_btn tr-bg" href="#"><span>Get CV</span></a>
@@ -112,14 +114,14 @@
 							Introduce about <br>
 							myself</h2>
 						<p>
-							I am a Front-End Developer,	I have 2 years of experience providing front-end development, producing high
+							Software development is hard. Managing projects is hard. Working remotely is hard. Here are
+							some things I'm good at, to help ease the pain.
+						</p>
+						<p>
+							I am a Front-End Developer, I have 1.5 years of experience providing front-end development,
+							producing high
 							quality responsive websites and exceptional user experience.
 						</p>
-						<!-- <p>
-							Is give may shall likeness made yielding spirit a itself together created after sea
-							is in beast beginning signs open god you're gathering whose gathered cattle let.
-							Creature whales fruit unto meat the life beginning all in under give two.
-						</p> -->
 						<a class="primary_btn" href="#"><span>Download CV</span></a>
 					</div>
 				</div>
@@ -131,7 +133,7 @@
 	<!--================ Srart Brand Area =================-->
 	<section class="brand_area section_gap_bottom">
 		<div class="container">
-			<div class="row justify-content-center">
+			<div class="row justify-content-center1">
 				<div class="col-lg-6">
 					<div class="row" style="margin-top: 65px">
 						<div class="col-lg-4 col-md-4 col-sm-6">
@@ -229,10 +231,10 @@
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
 						<h2>service offers </h2>
-						<!-- <p>
-							Is give may shall likeness made yielding spirit a itself togeth created
-							after sea <br> is in beast beginning signs open god you're gathering ithe
-						</p> -->
+						<p>
+							Front End Development is building out the visual components of a website. Using HTML, CSS ,
+							and Javascript, I build fast, interactive websites.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -240,30 +242,36 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s1.png" alt="">
-						<h4>Web Application</h4>
-						<p>Photo Gallary</p>
+						<h4>Web Design</h4>
+						<p>A website should be designed for the people who will use it, so that's exactly what I do.
+							User focused design should be the primary goal of any website.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s2.png" alt="">
 						<h4>UI/ux design</h4>
-						<p>Photoshop</p>
+						<p>UI/UX involves planning and iterating a site's structure and layout. Once the proper
+							information architecture is in place, I design the visual layer to create a beautiful user
+							experience.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s3.png" alt="">
-						<h4>JavaScript</Script>
+						<h4>Web Development</Script>
 						</h4>
-						<p>carousel slider lightbox</p>
+						<p>Every website should be built with two primary goals: Firstly, it needs to work across all
+							devices. Secondly, it needs to be fast as possible.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="feature_item">
 						<img src="img/services/s4.png" alt="">
 						<h4>Mobile Application</h4>
-						<p>Namma-Bazzer(E-Commerce), Agri-Mach(Agriculture), Izoom-Stars(Studio)</p>
+						<p>Mobile technologies have become an important platform to conduct business, generate leads and
+							support operations. Mobile platforms are changing very rapidly, as new devices, uses and
+							operating systems have been introduced by the market.</p>
 					</div>
 				</div>
 			</div>
@@ -362,10 +370,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 all following">
+					<div class="col-lg-4 col-md-6 all following latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/model_3_bg.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/model_3_bg.jpg" alt=""  style="width: 75% !important;"> 
 								<div class="overlay"></div>
 								<a href="img/portfolio/model_3_bg.jpg" class="img-gal">
 									<div class="icon">
@@ -379,10 +387,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 all upcoming">
+					<div class="col-lg-4 col-md-6 all upcoming latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/model_4_bg.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/model_4_bg.jpg" alt="" style="width: 75% !important;">
 								<div class="overlay"></div>
 								<a href="img/portfolio/model_4_bg.jpg" class="img-gal">
 									<div class="icon">
@@ -396,7 +404,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 all upcoming following">
+					<div class="col-lg-4 col-md-6 all upcoming following popular">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/img_0_large.jpeg" alt="">
@@ -413,10 +421,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 all following">
+					<div class="col-lg-4 col-md-6 all following latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/punch.png" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/punch.png" alt="" style="width: 75% !important;">
 								<div class="overlay"></div>
 								<a href="img/portfolio/punch.png" class="img-gal">
 									<div class="icon">
@@ -430,10 +438,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 all upcoming">
+					<div class="col-lg-4 col-md-6 all upcoming latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/punch.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/punch.jpg" alt="" style="width: 75% !important;">
 								<div class="overlay"></div>
 								<a href="img/portfolio/punch.jpg" class="img-gal">
 									<div class="icon">
@@ -447,10 +455,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 all upcoming">
+					<div class="col-lg-4 col-md-6 all upcoming latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/stop.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/stop.jpg" alt="" style="width: 75% !important;">
 								<div class="overlay"></div>
 								<a href="img/portfolio/stop.jpg" class="img-gal">
 									<div class="icon">
@@ -477,9 +485,9 @@
 				<div class="col-lg-8 text-center">
 					<div class="main_title">
 						<h2>client say about me</h2>
-						<!-- <p>Is give may shall likeness made yielding spirit a itself togeth created after sea is in beast
-							<br>
-							beginning signs open god you're gathering ithe</p> -->
+						<p>I don't work for people, I collaborate with them.
+							<br> - vicky
+						</p>
 					</div>
 				</div>
 			</div>
@@ -493,8 +501,11 @@
 							<div class="col-lg-8">
 								<div class="testi_text">
 									<h4>Elite Martin</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his
-										day third seed sixth seas unto. Saw from </p>
+									<p>"Vignesh is a highly talented designer and thinker. Vignesh can quickly
+										understand
+										what our needs are, what our audience expects and quickly speak to that. His
+										work ethics is stellar as his expertise. I would be thrilled to get to work with
+										Vignesh again and I highly recommend him."</p>
 								</div>
 							</div>
 						</div>
@@ -507,8 +518,11 @@
 							<div class="col-lg-8">
 								<div class="testi_text">
 									<h4>Davil Saden</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his
-										day third seed sixth seas unto. Saw from </p>
+									<p>"VigneshKumar is a great guy to work with. Good spirit, competent, and more than
+										willing
+										to put to long hours in to meet our deadline --- H works with a lot of structure
+										and understanding in a area of web development where this is rare. He's got a
+										eye for design and good coding sense."</p>
 								</div>
 							</div>
 						</div>
@@ -521,13 +535,17 @@
 							<div class="col-lg-8">
 								<div class="testi_text">
 									<h4>Elite Martin</h4>
-									<p>Him, made can't called over won't there on divide there male fish beast own his
-										day third seed sixth seas unto. Saw from </p>
+									<p>"Vignesh is one of those extremely rare individuals who can both design and code
+										with equal fluency. As a user interface and user experience desiger and
+										implementer, he really does speak the 'native language of the web' with
+										impressive chops in HTML/CSS using HAML and SASS, and JavaScript. His Ruby on
+										Rails knowledge is impressive, and his ability to command jQuery is incredibly
+										useful for a UI developer who is also a skilled designer. " </p>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="testi_item">
+					<!-- <div class="testi_item">
 						<div class="row">
 							<div class="col-lg-4">
 								<img src="img/testimonials/t2.jpg" alt="">
@@ -540,8 +558,8 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="testi_item">
+					</div> -->
+					<!-- <div class="testi_item">
 						<div class="row">
 							<div class="col-lg-4">
 								<img src="img/testimonials/t1.jpg" alt="">
@@ -554,8 +572,8 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="testi_item">
+					</div> -->
+					<!-- <div class="testi_item">
 						<div class="row">
 							<div class="col-lg-4">
 								<img src="img/testimonials/t2.jpg" alt="">
@@ -568,7 +586,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
@@ -632,8 +650,8 @@
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					Copyright &copy;
 					<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-					made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
-						target="_blank">Colorlib</a>
+					made  <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href=""
+						target="_blank">VigneshKumar</a>
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 				</p>
 			</div>
