--- a/portfolio-details.cva.html
+++ b/portfolio-details.cva.html
@@ -26,7 +26,8 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" href="index.html" style="font-weight: 600; color: #6354e5; font-size: 20px;"><img src="" alt="">VIGNESHKUMAR</a>
+                    <a class="navbar-brand logo_h" href="index.html"
+                        style="font-weight: 600; color: #6354e5; font-size: 20px;"><img src="" alt="">VIGNESHKUMAR</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -97,17 +98,15 @@
                     </div>
                     <div class="offset-lg-1 col-lg-5">
                         <div class="portfolio_right_text mt-30">
-                            <h4 class="text-uppercase">minimal interior design</h4>
+                            <h4 class="text-uppercase">CVA IT SUPPORT</h4>
                             <p>
-                                Made after a can't fruitful, fowl of greater saying years there saw you sea doesn't from
-                                morning called hath air morning herb appear hath replenish that created fill their
-                                lesser.
+                                This an Web-Site for an IT company
                             </p>
                             <ul class="list">
                                 <li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i
                                         class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></li>
-                                <li><span>Client</span>: colorlib</li>
-                                <li><span>Website</span>: colorlib.com</li>
+                                <li><span>Client</span>: Sivaraman</li>
+                                <li><span>Website</span>: cvaitsupport.com</li>
                                 <li><span>Completed</span>: 17 Aug 2018</li>
                             </ul>
                         </div>
@@ -122,10 +121,15 @@
                     <div class="offset-lg-1 col-lg-5">
                         <div class="portfolio_right_text mt-30">
                             <!-- <h4 class="text-uppercase">minimal interior design</h4> -->
-                            <p>
-                                Made after a can't fruitful, fowl of greater saying years there saw you sea doesn't from
-                                morning called hath air morning herb appear hath replenish that created fill their
-                                lesser.
+                            <p>They are the technology company driven by passion and values. Their passion is to build a
+                                technology company that is known for integrity, innovation, and excellence. They have
+                                delivered over 1000 solutions and continue to make pioneering contributions in the
+                                following areas.
+
+                                This an Under developing company to the compititors, the Company based on IT sector were
+                                developing Websites,Mobile Applications,web Applications and Designs using an perfect
+                                Tools.
+                                <br>Based on their development, the website has been developed.
                             </p>
                             <!-- <ul class="list">
                                 <li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i
@@ -217,8 +221,7 @@
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;
                     <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-                    made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                        target="_blank">Colorlib</a>
+                    made <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="" target="_blank">VigneshKumar</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
             </div>
