--- a/portfolio-details.nuaghtea.html
+++ b/portfolio-details.nuaghtea.html
@@ -106,9 +106,9 @@
                             <ul class="list">
                                 <li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i
                                         class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></li>
-                                <li><span>Client</span>: colorlib</li>
-                                <li><span>Website</span>: colorlib.com</li>
-                                <li><span>Completed</span>: 17 Aug 2018</li>
+                                <li><span>Client</span>: Sabari</li>
+                                <li><span>Website</span>: http://tea.cva-apps.cf/</li>
+                                <li><span>Completed</span>: 10 Nov 2018</li>
                             </ul>
                         </div>
                     </div>
@@ -123,9 +123,13 @@
                         <div class="portfolio_right_text mt-30">
                             <!-- <h4 class="text-uppercase">minimal interior design</h4> -->
                             <p>
-                                Made after a can't fruitful, fowl of greater saying years there saw you sea doesn't from
-                                morning called hath air morning herb appear hath replenish that created fill their
-                                lesser.
+                                An Tea Shop is asking to create an site for their business to improve.
+                                <br>
+                                This website is created just using an HTML and CSS only.
+                                <br>
+                                The customer has suprised while creating for their web site.
+                                <br>
+                                This an free site for the client. 
                             </p>
                             <!-- <ul class="list">
                                 <li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i
@@ -217,8 +221,8 @@
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;
                     <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-                    made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                        target="_blank">Colorlib</a>
+                    made  <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href=""
+                        target="_blank">VigneshKumar</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
             </div>
