--- a/portfolio-details.stars.html
+++ b/portfolio-details.stars.html
@@ -26,7 +26,8 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" href="index.html" style="font-weight: 600; color: #6354e5; font-size: 20px;"><img src="" alt="">VIGNESHKUMAR</a>
+                    <a class="navbar-brand logo_h" href="index.html"
+                        style="font-weight: 600; color: #6354e5; font-size: 20px;"><img src="" alt="">VIGNESHKUMAR</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -97,18 +98,17 @@
                     </div>
                     <div class="offset-lg-1 col-lg-5">
                         <div class="portfolio_right_text mt-30">
-                            <h4 class="text-uppercase">minimal interior design</h4>
+                            <h4 class="text-uppercase">IZOOM STARS</h4>
                             <p>
-                                Made after a can't fruitful, fowl of greater saying years there saw you sea doesn't from
-                                morning called hath air morning herb appear hath replenish that created fill their
-                                lesser.
+                                They Will Serve As A Bridge Between You And Digital Platforms Through The Following
+                                Services
                             </p>
                             <ul class="list">
                                 <li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i
                                         class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></li>
-                                <li><span>Client</span>: colorlib</li>
-                                <li><span>Website</span>: colorlib.com</li>
-                                <li><span>Completed</span>: 17 Aug 2018</li>
+                                <li><span>Client</span>: AnilKumar</li>
+                                <li><span>Website</span>: izoomstars.com</li>
+                                <li><span>Completed</span>: 21 oct 2018</li>
                             </ul>
                         </div>
                     </div>
@@ -123,9 +123,16 @@
                         <div class="portfolio_right_text mt-30">
                             <!-- <h4 class="text-uppercase">minimal interior design</h4> -->
                             <p>
-                                Made after a can't fruitful, fowl of greater saying years there saw you sea doesn't from
-                                morning called hath air morning herb appear hath replenish that created fill their
-                                lesser.
+                                We are ranked 2nd in world population and interestingly India’s average age population
+                                is 29 in which 50% are under 25.
+
+                                Hence there is the rise of digital platforms accross country from Healthlife,
+                                E-Commerces, Social Medias, Etc...
+                                <br>Business is every day challange, Marketing & Branding plays a vital role in
+                                converting any business into successful venture.
+
+                                Now a days to reach our target customers, It is mandatory to show our presence in
+                                Digital Platforms.
                             </p>
                             <!-- <ul class="list">
                                 <li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i
@@ -217,8 +224,7 @@
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;
                     <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-                    made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                        target="_blank">Colorlib</a>
+                    made <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="" target="_blank">VigneshKumar</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
             </div>
