--- a/services.html
+++ b/services.html
@@ -26,7 +26,8 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" href="index.html" style="font-weight: 600; color: #6354e5; font-size: 20px;"><img src="" alt="">VIGNESHKUMAR</a>
+                    <a class="navbar-brand logo_h" href="index.html"
+                        style="font-weight: 600; color: #6354e5; font-size: 20px;"><img src="" alt="">VIGNESHKUMAR</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -92,8 +93,8 @@
                     <div class="main_title">
                         <h2>service offers </h2>
                         <p>
-                            Is give may shall likeness made yielding spirit a itself togeth created
-                            after sea <br> is in beast beginning signs open god you're gathering ithe
+                            Front End Development is building out the visual components of a website. Using HTML, CSS ,
+                            and Javascript, I build fast, interactive websites.
                         </p>
                     </div>
                 </div>
@@ -102,29 +103,35 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="feature_item">
                         <img src="img/services/s1.png" alt="">
-                        <h4>Web Application</h4>
-                        <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+                        <h4>Web Design</h4>
+                        <p>A website should be designed for the people who will use it, so that's exactly what I do.
+                            User focused design should be the primary goal of any website.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="feature_item">
                         <img src="img/services/s2.png" alt="">
                         <h4>UI/ux design</h4>
-                        <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+                        <p>UI/UX involves planning and iterating a site's structure and layout. Once the proper
+                            information architecture is in place, I design the visual layer to create a beautiful user
+                            experience.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="feature_item">
                         <img src="img/services/s3.png" alt="">
-                        <h4>JavaScript</h4>
-                        <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+                        <h4>Web Development</h4>
+                        <p>Every website should be built with two primary goals: Firstly, it needs to work across all
+                            devices. Secondly, it needs to be fast as possible.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="feature_item">
                         <img src="img/services/s4.png" alt="">
                         <h4>Mobile Application</h4>
-                        <p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+                        <p>Mobile technologies have become an important platform to conduct business, generate leads and
+                            support operations. Mobile platforms are changing very rapidly, as new devices, uses and
+                            operating systems have been introduced by the market.</p>
                     </div>
                 </div>
             </div>
@@ -139,9 +146,9 @@
                 <div class="col-lg-8 text-center">
                     <div class="main_title">
                         <h2>client say about me</h2>
-                        <p>Is give may shall likeness made yielding spirit a itself togeth created after sea is in beast
-                            <br>
-                            beginning signs open god you're gathering ithe</p>
+                        <p>I don't work for people, I collaborate with them.
+                            <br> - vicky
+                        </p>
                     </div>
                 </div>
             </div>
@@ -155,13 +162,51 @@
                             <div class="col-lg-8">
                                 <div class="testi_text">
                                     <h4>Elite Martin</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his
-                                        day third seed sixth seas unto. Saw from </p>
+                                    <p>"Vignesh is a highly talented designer and thinker. Vignesh can quickly
+                                        understand
+                                        what our needs are, what our audience expects and quickly speak to that. His
+                                        work ethics is stellar as his expertise. I would be thrilled to get to work with
+                                        Vignesh again and I highly recommend him."</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="testi_item">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <img src="img/testimonials/t2.jpg" alt="">
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="testi_text">
+                                    <h4>Davil Saden</h4>
+                                    <p>"VigneshKumar is a great guy to work with. Good spirit, competent, and more than
+                                        willing
+                                        to put to long hours in to meet our deadline --- H works with a lot of structure
+                                        and understanding in a area of web development where this is rare. He's got a
+                                        eye for design and good coding sense."</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testi_item">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <img src="img/testimonials/t1.jpg" alt="">
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="testi_text">
+                                    <h4>Elite Martin</h4>
+                                    <p>"Vignesh is one of those extremely rare individuals who can both design and code
+                                        with equal fluency. As a user interface and user experience desiger and
+                                        implementer, he really does speak the 'native language of the web' with
+                                        impressive chops in HTML/CSS using HAML and SASS, and JavaScript. His Ruby on
+                                        Rails knowledge is impressive, and his ability to command jQuery is incredibly
+                                        useful for a UI developer who is also a skilled designer. " </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="testi_item">
                         <div class="row">
                             <div class="col-lg-4">
                                 <img src="img/testimonials/t2.jpg" alt="">
@@ -202,35 +247,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t1.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Elite Martin</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his
-                                        day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t2.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Davil Saden</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his
-                                        day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -294,8 +311,7 @@
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;
                     <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-                    made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                        target="_blank">Colorlib</a>
+                    made <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="" target="_blank">VigneshKumar</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
             </div>
