--- a/about.html
+++ b/about.html
@@ -101,13 +101,13 @@
                             Introduce about <br>
                             myself</h2>
                         <p>
-                            Whose given. Were gathered. There first subdue greater. Bearing you Whales heaven
-                            midst their. Beast creepeth. Fish days.
+                            Software development is hard. Managing projects is hard. Working remotely is hard. Here are
+                            some things I'm good at, to help ease the pain.
                         </p>
                         <p>
-                            Is give may shall likeness made yielding spirit a itself together created after sea
-                            is in beast beginning signs open god you're gathering whose gathered cattle let.
-                            Creature whales fruit unto meat the life beginning all in under give two.
+                            I am a Front-End Developer, I have 1.5 years of experience providing front-end development,
+                            producing high
+                            quality responsive websites and exceptional user experience.
                         </p>
                         <a class="primary_btn" href="#"><span>Download CV</span></a>
                     </div>
@@ -120,7 +120,7 @@
     <!--================ Srart Brand Area =================-->
     <section class="brand_area section_gap_bottom">
         <div class="container">
-            <div class="row justify-content-center">
+            <div class="row justify-content-center" style="margin-top: 15%;">
                 <div class="col-lg-6">
                     <div class="row" style="margin-top: 65px">
                         <div class="col-lg-4 col-md-4 col-sm-6">
@@ -217,9 +217,9 @@
                 <div class="col-lg-8 text-center">
                     <div class="main_title">
                         <h2>client SAy about me</h2>
-                        <p>Is give may shall likeness made yielding spirit a itself togeth created after sea is in beast
-                            <br>
-                            beginning signs open god you're gathering ithe</p>
+                        <p>I don't work for people, I collaborate with them.
+                            <br> - vicky
+                        </p>
                     </div>
                 </div>
             </div>
@@ -233,13 +233,51 @@
                             <div class="col-lg-8">
                                 <div class="testi_text">
                                     <h4>Elite Martin</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his
-                                        day third seed sixth seas unto. Saw from </p>
+                                    <p>"Vignesh is a highly talented designer and thinker. Vignesh can quickly
+                                        understand
+                                        what our needs are, what our audience expects and quickly speak to that. His
+                                        work ethics is stellar as his expertise. I would be thrilled to get to work with
+                                        Vignesh again and I highly recommend him."</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="testi_item">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <img src="img/testimonials/t2.jpg" alt="">
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="testi_text">
+                                    <h4>Davil Saden</h4>
+                                    <p>"VigneshKumar is a great guy to work with. Good spirit, competent, and more than
+                                        willing
+                                        to put to long hours in to meet our deadline --- H works with a lot of structure
+                                        and understanding in a area of web development where this is rare. He's got a
+                                        eye for design and good coding sense."</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testi_item">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <img src="img/testimonials/t1.jpg" alt="">
+                            </div>
+                            <div class="col-lg-8">
+                                <div class="testi_text">
+                                    <h4>Elite Martin</h4>
+                                    <p>"Vignesh is one of those extremely rare individuals who can both design and code
+                                        with equal fluency. As a user interface and user experience desiger and
+                                        implementer, he really does speak the 'native language of the web' with
+                                        impressive chops in HTML/CSS using HAML and SASS, and JavaScript. His Ruby on
+                                        Rails knowledge is impressive, and his ability to command jQuery is incredibly
+                                        useful for a UI developer who is also a skilled designer. " </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="testi_item">
                         <div class="row">
                             <div class="col-lg-4">
                                 <img src="img/testimonials/t2.jpg" alt="">
@@ -280,35 +318,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t1.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Elite Martin</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his
-                                        day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="testi_item">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="img/testimonials/t2.jpg" alt="">
-                            </div>
-                            <div class="col-lg-8">
-                                <div class="testi_text">
-                                    <h4>Davil Saden</h4>
-                                    <p>Him, made can't called over won't there on divide there male fish beast own his
-                                        day third seed sixth seas unto. Saw from </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -372,8 +382,8 @@
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;
                     <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-                    made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                        target="_blank">Colorlib</a>
+                    made <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href=""
+                        target="_blank">VigneshKumar</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
             </div>
