--- a/portfolio-details.farmers.html
+++ b/portfolio-details.farmers.html
@@ -26,7 +26,8 @@
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <a class="navbar-brand logo_h" href="index.html" style="font-weight: 600; color: #6354e5; font-size: 20px;"><img src="" alt="">VIGNESHKUMAR</a>
+                    <a class="navbar-brand logo_h" href="index.html"
+                        style="font-weight: 600; color: #6354e5; font-size: 20px;"><img src="" alt="">VIGNESHKUMAR</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -92,23 +93,21 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="left_img">
-                            <img class="img-fluid" src="img/portfolio/punch.jpg" alt="">
+                            <img class="img-fluid" src="img/portfolio/punch.jpg" alt="" style="max-width: 50%; margin-left: 50%;">
                         </div>
                     </div>
                     <div class="offset-lg-1 col-lg-5">
                         <div class="portfolio_right_text mt-30">
-                            <h4 class="text-uppercase">minimal interior design</h4>
+                            <h4 class="text-uppercase">FARMER</h4>
                             <p>
-                                Made after a can't fruitful, fowl of greater saying years there saw you sea doesn't from
-                                morning called hath air morning herb appear hath replenish that created fill their
-                                lesser.
+                                Mobile Application
                             </p>
                             <ul class="list">
                                 <li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i
                                         class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></li>
-                                <li><span>Client</span>: colorlib</li>
-                                <li><span>Website</span>: colorlib.com</li>
-                                <li><span>Completed</span>: 17 Aug 2018</li>
+                                <li><span>Client</span>: farmers</li>
+                                <!-- <li><span>Website</span>: colorlib.com</li> -->
+                                <li><span>Completed</span>: 20 Mar 2018</li>
                             </ul>
                         </div>
                     </div>
@@ -116,16 +115,16 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="left_img">
-                            <img class="img-fluid" src="img/portfolio/stop.jpg" alt="">
+                            <img class="img-fluid" src="img/portfolio/stop.jpg" alt="" style="max-width: 50%; margin-left: 50%;">
                         </div>
                     </div>
                     <div class="offset-lg-1 col-lg-5">
                         <div class="portfolio_right_text mt-30">
                             <!-- <h4 class="text-uppercase">minimal interior design</h4> -->
                             <p>
-                                Made after a can't fruitful, fowl of greater saying years there saw you sea doesn't from
-                                morning called hath air morning herb appear hath replenish that created fill their
-                                lesser.
+                                This Application is only used by the client.
+                                <br> This Application is only used for to store data.
+                                <br>this application is not for an customer side usage.
                             </p>
                             <!-- <ul class="list">
                                 <li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i
@@ -217,8 +216,7 @@
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;
                     <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-                    made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                        target="_blank">Colorlib</a>
+                    made <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="" target="_blank">VigneshKumar</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
             </div>
